# libORM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
libORM/: column_mapper.h  database.cpp  database.h  database.inl  implementation.h  libORM.h  mssql_impl.h  sql_statement.h  sql_type_converter.h  sqlite_impl.cpp  sqlite_impl.h  table_mapper.h
